# recommandations-collaboratives

./: .coveragerc  .dockerignore  .env.example  .flake8  .gitguardian.yaml  .gitignore  .lighthouserc.js  .pre-commit-config.yaml  .prettierignore  .pylintrc  .readthedocs.yaml  AUTHORS.md  Dockerfile  MANIFEST.in  README.md  TODO  addressbook.json  conftest.py  docker-compose.yml  fabfile.py  makefile  manage.py  package-lock.json  package.json  publiccode.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-dsrc.txt  requirements-dsuv.txt  requirements-srv.txt  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: rapport-de-bug.md
.github/workflows/: a11y.yml  codeql-analysis.yml  django.yml  doc.yml
data/: addressbook.json  cookie_consent_20230131.json
docker/: Dockerfile  devcontainer.json  docker-compose.yml
docs/: conf.json  conf.py  fts.rst  index.rst  install.rst  js_components.rst  models.rst  permissions.rst  plugins.rst  terminology.rst  urls.rst  workflows.rst
drafts/: aigui.sql  dumpurls.py  init.sql  notes.sql  reco-stats.sql  stats-uv.sql  update-verbs.sql
frontend/: package.json  vite.config.js
frontend/src/css/: crm.css
frontend/src/js/: main.js
frontend_tests/: .eslintrc.js  .prettierrc  README.md  cypress.config.js  package-lock.json  package.json  readme.md
frontend_tests/cypress/downloads/: downloads.htm
htmlcov/: index.html  status.json  urbanvitaliz___init___py.html  urbanvitaliz_apps___init___py.html  urbanvitaliz_apps_addressbook___init___py.html  urbanvitaliz_apps_addressbook_admin_py.html  urbanvitaliz_apps_addressbook_apps_py.html  urbanvitaliz_apps_addressbook_models_py.html  urbanvitaliz_apps_addressbook_urls_py.html  urbanvitaliz_apps_addressbook_views_py.html  urbanvitaliz_apps_geomatics___init___py.html  urbanvitaliz_apps_geomatics_admin_py.html  urbanvitaliz_apps_geomatics_apps_py.html  urbanvitaliz_apps_geomatics_management___init___py.html  urbanvitaliz_apps_geomatics_management_commands___init___py.html  urbanvitaliz_apps_geomatics_management_commands_loadcommunes_py.html  urbanvitaliz_apps_geomatics_models_py.html  urbanvitaliz_apps_geomatics_views_py.html  urbanvitaliz_apps_home___init___py.html  urbanvitaliz_apps_home_admin_py.html  urbanvitaliz_apps_home_apps_py.html  urbanvitaliz_apps_home_models_py.html  urbanvitaliz_apps_home_urls_py.html  urbanvitaliz_apps_home_utils_py.html  urbanvitaliz_apps_home_views_py.html  urbanvitaliz_apps_projects___init___py.html  urbanvitaliz_apps_projects_admin_py.html  urbanvitaliz_apps_projects_apps_py.html  urbanvitaliz_apps_projects_models_py.html  urbanvitaliz_apps_projects_templatetags___init___py.html  urbanvitaliz_apps_projects_templatetags_projects_extra_py.html  urbanvitaliz_apps_projects_urls_py.html  urbanvitaliz_apps_projects_views_py.html  urbanvitaliz_apps_resources___init___py.html  urbanvitaliz_apps_resources_admin_py.html  urbanvitaliz_apps_resources_apps_py.html  urbanvitaliz_apps_resources_models_py.html  urbanvitaliz_apps_resources_urls_py.html  urbanvitaliz_apps_resources_views_py.html  urbanvitaliz_apps_survey___init___py.html  (+13 more)
notebooks/: README.md  api_documentation.ipynb  assign_users_to_projects.ipynb  assign_users_to_projects.py  challenge_process.ipynb  demarches_simplifiees.ipynb  django_for_jupyter.py  email_templates.ipynb  materialized_views.ipynb  webhook.md
notebooks/docs/: ComponentTemplate.ipynb
notebooks/dsrc-doc/: ComponentTemplate.ipynb  ComponentTemplate.md  ComponentTemplate.py  ComposantRef.ipynb  ComposantRef.py  README.md
notebooks/dsrc_doc/: ComponentTemplate.py  ComposantRef.py  DsrcButton.py  README.md  dsrc_utils.py
rcm/: apps.py  blocks.py  models.py
recoco/: __init__.py  asgi.py  celery.py  forms.py  template_loaders.py  tests.py  urls.py  utils.py  verbs.py  worker.py  wsgi.py
recoco/apps/: __init__.py
recoco/apps/addressbook/: apps.py  (+9 more)
recoco/dsrc_ui/: rollup.config.fonts.js
recoco/frontend/: .env.example  .eslintrc.js  .prettierrc  .stylelintrc.json  .yarnrc.yaml  Dockerfile  README.md  babel.config.js  jest.config.js  jsconfig.build.json  jsconfig.json  package-lock.json  package.json  postcss.config.mjs  vite.config.js
recoco/rest_api/: filters.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
recoco/settings/: common.py  development.py.example  frontend_tests.py  frontend_tests.py.example  frontend_tests_permissions.py  frontend_tests_permissions.py.example  production.py  testing.py
recoco/templatetags/: common_extra.py
scripts/: create_site_localhost_aliases.py  ds_spreadsheet.py  exportreco.py  fixownerorg.py  fixownerphone.py  fixsubmittedby.py  importreco.py  metrics_diff.sh  onboarding2edl.py  recotopics.py  run_llm.py  setup_ds_dev.py  tp2t.py  update_verbs.py
sql/: comment.sql  dumpurls.py  init.sql  notes.sql  reco.sql  sabine-stats.sql  stats.sql  update-verbs.sql
static/css/: base.css  base.css.map  markdownx.css  markdownx.css.map  sidebars.css  sidebars.css.map
static/resources/: resources.css  resources.css.map
tests/: package.json
urbanvitaliz/: __init__.py  asgi.py  tests.py  urls.py  utils.py  verbs.py  wsgi.py
urbanvitaliz/dsrc-ui/: README.md  package.json  rollup.config.csscore.js  rollup.config.csstokens.js  rollup.config.js
urbanvitaliz/dsrc_ui/: .eslintrc.js  .gitignore  README.md  jsconfig.json  package.json  rollup.config.csscore.js  rollup.config.csstokens.js  rollup.config.fonts.js  rollup.config.icons.js  rollup.config.js  rollup.config.modules.js  vite.config.js
urbanvitaliz/frontend/: .eslintrc.js  .prettierrc  .stylelintrc.json  jsconfig.build.json  jsconfig.json  package.json  vite.config.js
urbanvitaliz/settings/: common.py  development.py.example  production.py
urbanvitaliz/sql/: update-verbs.sql
urbanvitaliz/templates/: base.html  footer.html  menu-project-toolbar.html  menu-switchtender-toolbar.html  menu-top-switchtender.html  menu-top-user-tools.html  menu-top.html  sidebar.html  site.html
urbanvitaliz/templatetags/: common_extra.py  dsrc_tags.py
(+3199 files in other folders)
