[project]
name = "recoco"
dynamic = ["version"]

authors = [{ name = "Recoco Dev Team" }]
maintainers = [
    { name = "Guillaume Libersat", email = "guillaume.libersat@beta.gouv.fr" },
]
license = { name = "AGPL-v3", file = "LICENSE" }

description = "Recommandations Collaboratives"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "beautifulsoup4==4.12.3",
    "celery==5.4.0",
    "django>=5.1.15,<5.2",
    "django-activity-stream",
    "django-admin-csvexport==2.2",
    "django-allauth[mfa,openid,socialaccount]==65.13.0",
    "django-autoslug==1.9.9",
    "django-celery-results==2.5.1",
    "django-clone==5.3.3",
    "django-compressor==4.5.1",
    "django-cookie-consent",
    "django-crispy-forms==2.0",
    "django-dbtemplates",
    "django-filter>=24.3",
    "django-gravatar2>=1.4.5",
    "django-guardian==2.4.0",
    "django-hijack==3.4.5",
    "django-htmx>=1.22.0",
    "django-json-widget==2.0.1",
    "django-leaflet>=0.31.0",
    "django-magicauth",
    "django-markdownx==4.0.7",
    "django-model-info>=2024.11.5",
    "django-multisite2>=2.0.1",
    "django-notifications-hq",
    "django-ordered-model==3.7.4",
    "django-otp==1.3.0",
    "django-phonenumber-field[phonenumbers]==6.3.0",
    "django-polymorphic>=4.1.0",
    "django-recaptcha==3.0.0",
    "django-rest-polymorphic>=0.1.10",
    "django-reversion==5.0.2",
    "django-reversion-compare==0.17.0",
    "django-sass-processor==1.4.1",
    "django-sesame[ua]==3.2.3",
    "django-tagging",
    "django-taggit==5.0.1",
    "django-vite==3.0.3",
    "django-waffle==4.1.0",
    "django-watson==1.6.3",
    "django-webhook",
    "djangorestframework==3.15.2",
    "djangorestframework-simplejwt>=5.5.1",
    "djangorestframework-xml>=2.0.0",
    "drf-spectacular[sidecar]>=0.28.0",
    "dynamic-django-forms>=0.1.11",
    "ipython>=8.32.0",
    "libsass>=0.23.0",
    "lxml[html-clean]>=5.3.1",
    "markdown-link-attr-modifier==0.2.1",
    "metabase-api==3.4",
    "multimethod==1.7",
    "mwclient==0.11.0",
    "pandoc==2.4",
    "pillow==11.3.0",
    "psycopg[c]>=3.2.12",
    "puremagic>=1.30",
    "redis==5.0.4",
    "requests-html==0.10.0",
    "rest-framework-generic-relations>=2.2.0",
    "sentry-sdk>=2.20.0",
    "setuptools==78.1.1",
    "sib-api-v3-sdk>=7.6.0",
    "tqdm>=4.67.1",
    "urllib3>=2.6.3",
    "wagtail==6.3.5",
]

[project.urls]
Homepage = "https://recommandations-collaboratives.beta.gouv.fr/"
Documentation = "https://reco-co.gitbook.io/"
Repository = "https://github.com/betagouv/recommandations-collaboratives/"

[tool.setuptools.packages.find]
include = ["recoco*"] # package names should match these glob patterns (["*"] by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)


[tool.setuptools.dynamic]
version = { attr = "recoco.__version__" }

[tool.uv]
package = false

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.djlint]
# ignore = "W013"
extension = "html"
indent = 4
exclude = ".venv,venv,.eggs" # override the default set of excluded paths

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "recoco.settings.testing"
addopts = [
    "-p no:warnings",
    "--reuse-db",
    "--tb=short",
    "--numprocesses=auto",
    "--maxprocesses=4",
    "--cov=recoco",
    "--cov-report=xml",
]
testpaths = ["recoco"]
python_files = "tests.py test_*.py *_test.py *_tests.py"

[tool.pylint.main]
jobs = 2
load-plugins = "pylint_django"
good-names-rgxs = "^[_a-z][_a-z0-9]?$"
ignore = ["settings", "static", "templates", ".venv", "tests", "migrations"]
disable = [
    "missing-function-docstring",
    "missing-class-docstring",
    "missing-module-docstring",
    "use-list-literal",
    "use-dict-literal",
    "duplicate-code",
    "possibly-unused-variable",   # django views w/ locals()
    "consider-using-f-string",
    "fixme",
]

[tool.pylint.design]
min-public-methods = 1

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "B",  # flake8-bugbear
    "F",  # Pyflakes
    "I",  # isort
    "S",  # flake8-bandit
]
unfixable = ["ALL"]
fixable = ["I"]
exclude = [
    "docs/*",
    "frontend_tests/*",
    "node_modules/*",
    "notebooks/*",
    "sql/*",
]
ignore = ["S101", "S110", "S112"]

[tool.ruff.lint.isort]
case-sensitive = true
known-third-party = [
    "crispy_forms",
    "django",
    "dotenv",
    "fabric",
    "factory",
    "guardian",
    "IPython",
    "ipywidgets",
    "model_bakery",
    "requests",
    "rest_framework",
]
split-on-trailing-comma = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.extend-per-file-ignores]
"**/migrations/*.py" = ["I"]
"**/test_*.py" = ["S105"]
"recoco/settings/*.py" = ["F403", "F405", "E402"]
"recoco/apps/metrics/**/*.py" = ["S608"]

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.uv.sources]
django-magicauth = { git = "https://github.com/glibersat/django-magicauth", rev = "55eab0b91c95012944933b342748540b2c1b31bf" }
django-notifications-hq = { git = "https://github.com/glibersat/django-notifications.git", rev = "feature/sites-framework-dj5" }
django-activity-stream = { git = "https://github.com/glibersat/django-activity-stream.git", rev = "django4" }
django-dbtemplates = { git = "https://github.com/jazzband/django-dbtemplates.git", rev = "master" }
django-cookie-consent = { git = "https://github.com/jazzband/django-cookie-consent", rev = "master" }
django-tagging = { git = "https://github.com/nextories/django-tagging.git", rev = "bug/usage_for_model_with_filters_none" }
django-webhook = { git = "https://github.com/etchegom/django-webhook.git", rev = "recoco" }

[tool.uv-secure.vulnerability_criteria]
ignore_vulnerabilities = ["GHSA-xm59-rqc7-hhvf"] # nbconvert does not have a fix yet. todo upgrade when we have a fix

[dependency-groups]
dev = [
    "coverage==7.4.1",
    "django-coverage-plugin>=3.1.0",
    "django-debug-toolbar==4.3.0",
    "django-extensions==3.2.1",
    "fabric==3.2.2",
    "freezegun>=1.5.1",
    "graphviz==0.20.1",
    "ipykernel==6.20.1",
    "ipython>=8.32.0",
    "jupyter==1.1.1",
    "jupytext==1.16.1",
    "model-bakery==1.20.4",
    "notebook==6.4.12",
    "pre-commit==3.6.0",
    "pylint>=3.3.4",
    "pylint-django>=2.6.1",
    "pytest==8.0.1",
    "pytest-cov==4.1.0",
    "pytest-django==4.8.0",
    "pytest-icdiff==0.9",
    "pytest-mock==3.12.0",
    "pytest-subtests==0.11.0",
    "pytest-sugar==1.0.0",
    "pytest-xdist==3.5.0",
    "python-dotenv>=1.0.1",
    "pytz>=2025.1",
    "requests-mock==1.12.1",
    "responses==0.25.3",
    "rich>=13.9.4",
    "ruff>=0.11.12",
    "semgrep==1.61.1",
    "sphinx-autodoc-annotation>=1.0.post1",
    "sphinx-js>=4.0.0",
    "sphinx-toolbox>=3.8.2",
    "sphinxcontrib-django>=2.5",
    "sphinxcontrib-django-urls>=0.3",
    "uv>=0.9.6",
]


[tool.ruff]
line-length = 88

[tool.ruff.format]
skip-magic-trailing-comma = false
exclude = ["*.ipynb", "fabfile.py", "notebooks/*", "sql/*", "frontend_tests/*", "docs/*", "node_modules/*"]
